# AI-Pokemon-emulator

./: .gitignore  README.md  _log_shiny_methods.py  app.py  pyproject.toml  requirements.txt  test_integration.py
modules/: __init__.py  app_utils.py  bot_modes.py  cheat_manager.py  config.py  database.py  emulator_api.py  evolution_data.py  feebas_berry.py  game_bot.py  main_runner.py  notifications.py  performance.py  pokemon_data.py  rng_pokemon.py  save_merger.py  shiny_scan.py  stats_dashboard.py  symbol_tables.py  tid_engine.py  ui_instance_card.py  ui_save_dialog.py  ui_sidebar.py
modules/adapters/: __init__.py  pokebot_adapter.py  pokefinder_adapter.py
tests/: conftest.py  test_cheat_manager.py  test_database.py  test_emulator_api.py  test_evolution_data.py  test_feebas_berry.py  test_game_bot.py  test_performance.py  test_pokemon_data.py  test_rng_pokemon.py  test_stats_dashboard.py  test_symbol_tables.py
