[project]
name = "gen3-shiny-automation"
version = "0.1.0"
description = "Automated shiny hunting system for Pokemon Gen 3 (Fire Red) with legitimate TID/SID generation"
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.54",
    "opencv-python>=4.9.0",
    "numpy>=1.26.4",
    "Pillow>=10.2.0",
    "psutil>=5.9.8",
]

[project.scripts]
shiny-hunt = "modules.main_runner:main"
